Fix animation menu and playlist spacing

--- a/src/app/modules/header/header/header.component.scss
+++ b/src/app/modules/header/header/header.component.scss
@@ -74,11 +74,12 @@
     transition-duration: 250ms;
 
     a {
-        margin: 10px;
+        margin-right: 10px;
+        line-height: 30px;
     }
 }
 
 .open {
     visibility: visible;   
-    height: 40px;
+    height: 60px;
 }
