--- a/src/app/modules/playlists/playlists/playlists.component.scss
+++ b/src/app/modules/playlists/playlists/playlists.component.scss
@@ -17,6 +17,14 @@
         text-align: center;
         transition-duration: 250ms;
 
+        &:first-child {
+            margin-left: 0px;
+        }
+
+        &:last-child {
+            margin-right: 0px;
+        }
+
         .name {
             display: flex;
             flex-grow: 1;
